<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_dark"
    tools:context=".CreateEventActivity">

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/take_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/photo"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="57dp"
        android:text="@string/take_photo"
        android:textSize="10sp" />

    <Button
        android:id="@+id/finish_new_event_creation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="11dp"
        android:text="@string/create_event"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/name_of_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="45dp"
        android:text="@string/enter_name_of_event"
        />

    <TextView
        android:id="@+id/photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="240dp"
        android:text="@string/attach_a_photo"
        />

    <TextView
        android:id="@+id/event_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="314dp"
        android:text="@string/description_text_view"
        />

    <TextView
        android:id="@+id/time_of_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="113dp"
        android:text="@string/time_of_event" />

    <TextView
        android:id="@+id/date_of_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="168dp"
        android:text="@string/date_of_event" />

    <EditText
        android:id="@+id/name_input"
        android:layout_width="214dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/name_of_event"
        android:background="@android:color/white"/>

    <EditText
        android:id="@+id/enter_event_description"
        android:layout_width="330dp"
        android:layout_height="183dp"
        android:layout_above="@+id/finish_new_event_creation"
        android:layout_centerHorizontal="true"
        android:background="@android:color/white" />



</RelativeLayout>