<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.marcu.androidros.Map.MapActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--Body-->
        <RelativeLayout
            android:id="@+id/rellayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true">

            <include layout="@layout/layout_center_viewpager" />

            <Button
                android:id="@+id/get_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/location_text_view"
                android:layout_toEndOf="@+id/name_of_event"
                android:text="@string/resume_location_tracking"
                android:textSize="10sp" />

            <Button
                android:id="@+id/finish_new_event_creation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="56dp"
                android:text="@string/create_event"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/location_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="247dp"
                android:text="@string/location_text_view" />

            <TextView
                android:id="@+id/location_longitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/date"
                android:layout_alignTop="@+id/get_location"
                android:text="@string/location_longitude"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/location_latitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/get_location"
                android:layout_alignEnd="@+id/location_longitude"
                android:text="@string/location_latitude"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/name_of_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/name_input"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="-200dp"
                android:text="@string/enter_name_of_event" />


            <TextView
                android:id="@+id/photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="144dp"
                android:text="@string/attach_a_photo" />

            <TextView
                android:id="@+id/event_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignStart="@+id/time_of_event"
                android:layout_marginBottom="186dp"
                android:text="@string/description_text_view" />

            <TextView
                android:id="@+id/time_of_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/location_text_view"
                android:layout_alignParentTop="true"
                android:layout_marginTop="229dp"
                android:text="@string/time_of_event" />

            <TextView
                android:id="@+id/date_of_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/location_text_view"
                android:layout_alignTop="@+id/choose_date"
                android:text="@string/date_of_event" />

            <Button
                android:id="@+id/choose_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:drawableLeft="@drawable/ic_date"
                android:text="choose date"
                android:textSize="10sp" />


            <TextView
                android:id="@+id/date"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/photo"
                android:layout_alignTop="@+id/choose_date"
                android:text="DD/MM/YYYY"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/time"
                android:layout_width="225dp"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/time_of_event"
                android:layout_alignStart="@+id/get_location"
                android:text="HH:MM"
                android:textSize="20sp" />

            <Button
                android:id="@+id/choose_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/time_of_event"
                android:layout_toEndOf="@+id/get_location"
                android:drawableLeft="@drawable/ic_time"
                android:text="choose time"
                android:textSize="10sp" />


            <EditText
                android:id="@+id/name_input"
                android:layout_width="214dp"
                android:layout_height="30dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="177dp"
                android:layout_toEndOf="@+id/event_description"
                android:background="@android:color/white" />

            <EditText
                android:id="@+id/enter_event_description"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="146dp"
                android:background="@android:color/white" />

            <ImageButton
                android:id="@+id/image_button"
                android:layout_width="match_parent"
                android:layout_height="134dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:background="@color/bg_screen3" />


        </RelativeLayout>


        <!--Botton navigtaion-->
        <include layout="@layout/layout_bottom_navigation_view" />


    </RelativeLayout>



</android.support.design.widget.CoordinatorLayout>